---------------------------------------------------------------------------------------------------
Version: 0.3.25
Date: 2022-03-14
  Changes:
    - Show hidden recipes
    - Missing locales added for domains and categories
---------------------------------------------------------------------------------------------------
Version: 0.3.24
Date: 2022-03-14
  Changes:
    - Support for sonaxaton-research-queue
    - "open target" handler improved
    - more on fuel-category
    - pipette
    - presentation of catalyst amounts improved
    - boiler recipes improved
    - tooltip of mining recipe improved
    - BurningRecipe and RocketLaunchRecipe added
---------------------------------------------------------------------------------------------------
Version: 0.3.23
Date: 2021-10-02
  Bugfixes:
    - Fixed: crash when forcing handcrafting from presentator screen
  Changes:
    - Introducing 3-digit-formatting
    - 3-digit-formating for items-per-tick
    - icons that are special to ingteb but referenced from core are copied to ingteb mod
---------------------------------------------------------------------------------------------------
Version: 0.3.22
Date: 2021-04-14
  Bugfixes:
    - Fixed: crash when selecting ash (Pyanodon)
---------------------------------------------------------------------------------------------------
Version: 0.3.21
Date: 2021-04-03
  Changes:
    - Autocrafting setup simplified
    - Not use icons in mod-name
    - Provide tooltip for technologies
    - Use description of entity as fallback for items
---------------------------------------------------------------------------------------------------
Version: 0.3.20
Date: 2021-03-26
  Changes:
    - show items-per-timeunit
    - use icons in settings
  Bugfixes:
    - fixing Crash in map editor
---------------------------------------------------------------------------------------------------
Version: 0.3.19
Date: 2021-03-23
  Bugfixes:
    - fixing help only works for entities 